--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,13 @@
-remote_theme: "mmistakes/minimal-mistakes"
+remote_theme: mmistakes/minimal-mistakes
+minimal_mistakes_skin: dark
+
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
 
 defaults:
   - scope:
