--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,7 @@
-docs_list_title: ACME Documentation
 docs:
-
-- title: Introduction
-  url: docs.md
-  
-- title: Configuration
-  url: test.md
+  - title: Getting Started
+    children:
+      - title: "Quick-Start Guide"
+        url: docs.md
+      - title: "Structure"
+        url: test.md
