--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 docs:
   - title: Getting Started
     children:
-      - title: "Quick-Start Guide"
-        url: docs.md
-      - title: "Structure"
-        url: test.md
+      - title: "docs"
+        url: /docs
+      - title: "test"
+        url: /test
