--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 remote_theme: mmistakes/minimal-mistakes
 minimal_mistakes_skin: "dark"
 plugins:
+  - jekyll-remote-theme
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
@@ -8,3 +9,5 @@ plugins:
   - jekyll-include-cache
 
 title: "Docs for Thies"
+url: "https://h0ney-pixel.github.io"
+baseurl: "/docs"
