--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 remote_theme: mmistakes/minimal-mistakes
 minimal_mistakes_skin: "dark"
+
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
@@ -8,3 +9,12 @@ plugins:
   - jekyll-include-cache
 
 title: "Docs for Thies"
+
+defaults:
+  # _docs
+  - scope:
+      path: ""
+      type: docs
+    values:
+      sidebar:
+        nav: "docs"
