--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,6 @@ docs:
   - title: Getting Started
     children:
       - title: "docs"
-        url: /docs/
+        url: /
       - title: "test"
         url: /test/
