--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,13 @@ plugins:
 
 title: "Docs for Thies"
 
+defaults:
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+
 atom_feed:
   hide: true
