--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 main:
   - title: "Getting Started"
-    url: /test
-  - title: "thiesketelsen"
+    url: /test/
+  - title: "thiesketelsen.de"
     url: /thiesketelsen
